Temporary fix padding-left to align the content
*todo*

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ a, a:link, a:visited, a:hover, a:active {
 
 .maintext {
   margin: 0;
-  padding: 0 0 0 20px;
+  padding: 0 0 0 40px;
   background: #481817;
   -moz-opacity: 0.65;
   -khtml-opacity: 0.65;
